# LKMeans

./: .gitignore  README.md  expe.py  experiment.py  experiment_1.py  experiment_1_100.py  experiment_1_500.py  experiment_2.py  experiment_2_100.py  experiment_2_500.py  main.py  master.ipynb  notebook-transformer.ipynb  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/: .pylintrc
.github/workflows/: release.yml  test.yml
config/: .pylintrc  bootstrap.sh  publish_to_pypi.sh  requirements_qa.txt
dataset_experiments/: experiments_runner.py  utils.py
experiments/experiment_1/: factor_0_1.tex  factor_0_2.tex  factor_0_3.tex  factor_0_4.tex  factor_0_5.tex  factor_0_6.tex  factor_0_7.tex  factor_0_8.tex  factor_0_9.tex
experiments/experiment_1_sigma_1/: experiment_1.tex
experiments/experiment_2_sigma_1/: experiment_1.tex
experiments/experiment_sigma_1/: factor_0_9.tex
graph/: generate_dimension_histogram.py  plot_minkowski.py
lib/: __init__.py  data.py  decomposition.py  deprecated.py  distance.py  distance_test.py  errors.py  experiment.py  experiment_metrics.py  kmeans.py  kmeans_test.py  lk_norm.py  lkmeans.py  metric_meter.py  minkowski.py  optimizers.py  points_generator.py  solver_tester.py  timer.py  types.py
lkmeans/: __init__.py  clustering.py  distance.py  optimizers.py
lkmeans/clustering/: __init__.py  base.py  semi_supervised.py  unsupervised.py  utils.py
lkmeans/clustering/self_supervised/: __init__.py  get_preprocessor.py  preprocessor.py  preprocessor_parameters.py  preprocessor_type.py
lkmeans/clustering/semi_supervised/: __init__.py  hard_semi_supervised_lkmeans.py  hard_supervised_lkmeans.py  semi_supervised_clustering.py  soft_semi_supervised_lkmeans.py  soft_supervised_lkmeans.py  utils.py
lkmeans/clustering/supervised/: __init__.py  hard_supervised_lkmeans.py  soft_supervised_lkmeans.py  supervised_clustering.py  utils.py
lkmeans/clustering/unsupervised/: __init__.py  lkmeans.py  unsupervised_clustering.py
lkmeans/examples/: decomposition.py  experiment.py  experiment_data.py  main.py  run_real_datasets.py
lkmeans/examples/data/: experiment_data.py  points_generator.py
lkmeans/examples/scripts/: readme.md  runner_self_supervised.sh  runner_self_supervised_real_data.sh  runner_semi_supervised.sh  runner_supervised.sh  runner_unsupervised.sh  runner_unsupervised_real_data.sh  sbatch_self_supervised.sh  sbatch_self_supervised_real_data.sh  sbatch_semi_supervised.sh  sbatch_unsupervised.sh  sbatch_unsupervised_real_data.sh  super_runner.sh  super_runner_real_data.sh
lkmeans/optimizers/: __init__.py  bound_optimizer.py  get_optimizer.py  mean_optimizer.py  median_optimizer.py  optimizer.py  segment_slsqp_optimizer.py  slsqp_optimizer.py
lkmeans/report/: generate_dimension_histogram.py  metric_meter.py  plot_minkowski.py
lkmeans/tests/: solver_tester.py  test_api.py  test_cluster_assign.py  test_optimizer.py
notebooks/: test.ipynb
plot/: generate_dimension_histogram.py
real_datasets/: run_real_datasets.py  utils.py
report/: argument_parser.py  log_parser.py  metric_name_processor.py  plot_minkowski.py  readme.md
report/charts/: chart_argument_parser.py  generate_decomposition_example.py  generate_decomposition_examples.sh  generate_dimension_histogram.py  main.py
report/tables/: highlight_rule.py  main.py  saver.py  styler.py  table_argument_parser.py
tests/: test_api.py  test_cluster_assign.py  test_optimizer.py
